--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "rest-rant",
   "version": "1.0.0",
   "engines": {
-    "node": "16.x",
-    "npm": "8.x"
+    "node": "16.x"
   },
   "description": "",
   "main": "index.js",
